source.cpp added

--- a/modules/audio_processing/aec/vs/aec/aec/aec.vcxproj
+++ b/modules/audio_processing/aec/vs/aec/aec/aec.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="..\..\..\aec_core_sse2.cc" />
     <ClCompile Include="..\..\..\aec_resampler.cc" />
     <ClCompile Include="..\..\..\echo_cancellation.cc" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\aec_core.h" />
